some edits..  (duh)

--- a/tres/static/deeptime.html
+++ b/tres/static/deeptime.html
@@ -33,14 +33,14 @@
       "description": "Data set for measurement JanusVcdImage and leg 202",
         "name": "JanusVcdImage202",
   "url": "http://opencoredata.org/collections/measurement/JanusVcdImage/202",
-    "ex:geotime": {
-         "@type": ["skos:Concept", "gts:GeochronologicEra", "time:ProperInterval", "gts:Age"],
+    "ex:geoTime": {
+         "@type": ["time:ProperInterval"],
      "label": {
           "@language": "en",
         "@value": "Carbon data ..."
      },
-     "isc:hasBeginning": "isc:BaseBathonian",
-     "isc:hasEnd": "isc:BaseCallovian"
+     "time:hasBeginning": "isc:BaseBathonian",
+     "time:hasEnd": "isc:BaseCallovian"
       }
     }
 </script>
