Update to some work on the 418 follow on work around SDO extensions

--- a/tres/web/index.html
+++ b/tres/web/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Time Testing..  </title>
+    <title>Testing till it hurts </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
-    <script src="main.js"></script>
 </head>
 <body>
   <div class="wrapper">
-  <div class="box header">Project Zero:  Service Landing Page Test</div>
-  <div class="box sidebar"><img src=./images/eclogo.png></div>
-  <div class="box sidebar2">Repo link, link to youtube tutorial</div>
+  <div class="box header">Landing Page Lab</div>
+  <div class="box sidebar"><img src="./images/eclogo.png"></div>
+  <div class="box sidebar2">Screencasts coming</div>
   <div class="box content">
 	  
      <p> This is a testing page.  Do not bookmark or share this page as its 
      lifespan is likely short.  If you need to reference this work, do so by
-     its source repository (x).</p>
+     its source repository at GitHub  ().</p>
 
      <p> The purpose of this page is to test various approaches to describing
      data services and time based resources in a manner that can be indexed, searched and retrieved 
@@ -27,6 +26,8 @@
      <p>Current tests</p>
 
      <ul>
+         <li>DCAT type Dataservice
+         </li>
 	     <li>
 	        <a href="deeptime.html">Deep time resource</a> Deep time test, service landing page (Link to SDTT)
 	     </li>
@@ -39,7 +40,6 @@
 	     <li>
 	        <a href="timeSeriesService.html">Time Series Service</a> Pure service only test for time series style data (Link to SDTT)
 	     </li>
-     </ul>
      </ul>
   
   </div>
